# stratoagentic

./: .gitignore  LICENSE  README.md
backend/: go.mod  go.sum
backend/cmd/api/: main.go
backend/internal/config/: config.go
backend/internal/db/: db.go  migrate.go
backend/internal/flightcache/: cache.go
backend/internal/httpapi/: router.go  static.go  ws.go
backend/internal/mongo/: geojson.go  mongo.go
backend/internal/opensky/: client.go  models.go
backend/internal/poller/: opensky_poller.go
backend/internal/stream/: hub.go
backend/migrations/: 001_init.sql
data/: AtlantaSEC.htm  CMakeLists.txt
data/src/: main.cpp
docker/: .dockerignore  docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  Globe3D.tsx  Map2D.tsx  RasterView.tsx  global.d.ts  icons.ts  index.tsx  styles.css  types.ts  useInterpolatedFlights.ts  ws.ts
